dev/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 7777 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              failure_mode_allow: false
              message_timeout: 5s
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_proc_cluster
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
                request_body_mode: FULL_DUPLEX_STREAMED
                response_body_mode: NONE
                request_trailer_mode: SEND
                response_trailer_mode: SKIP
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: any
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: blackhole_upstream }
  clusters:
  - name: ext_proc_cluster
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    circuit_breakers:
      thresholds:
      - max_connections: 40000
        max_pending_requests: 40000
        max_requests: 40000
        max_retries: 1024
    connect_timeout: 2s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options:
            initial_stream_window_size: 65536
            initial_connection_window_size: 1048576
    load_assignment:
      cluster_name: ext_proc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ohttprelay
                port_value: 9006
          load_balancing_weight: 1
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            match_typed_subject_alt_names: []
            trust_chain_verification: ACCEPT_UNTRUSTED
  - name: blackhole_upstream
    type: STATIC
    connect_timeout: 1s
    load_assignment:
      cluster_name: blackhole_upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 1 }
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
